Add styles for figure, p, li, h2 and body elements.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,19 @@
 h1 {
     text-align: center;
 }
+
+figure {
+    text-align: center;
+}
+
+p, li{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+    text-decoration: underline;
+}
+
+body {
+    background-color: aqua;
+}
